--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller/LoginController.cs" />
+    <Compile Include="Controller/AuthController.cs" />
     <Compile Include="View/LoginFormView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,11 +55,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View/SignUpForm.cs">
+    <Compile Include="View/SignupFormView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View/SignUpForm.Designer.cs">
-      <DependentUpon>View/SignUpForm.cs</DependentUpon>
+    <Compile Include="View/SignupFormView.Designer.cs">
+      <DependentUpon>View/SignupFormView.cs</DependentUpon>
     </Compile>
     <Compile Include="Model/User.cs" />
     <EmbeddedResource Include="View/LoginFormView.resx">
@@ -74,8 +74,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="View/SignUpForm.resx">
-      <DependentUpon>SignUpForm.cs</DependentUpon>
+    <EmbeddedResource Include="View/SignupFormView.resx">
+      <DependentUpon>SignupFormView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
