--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -46,25 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controller/AuthController.cs" />
-    <Compile Include="View/LoginFormView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View/LoginFormView.Designer.cs">
-      <DependentUpon>View/LoginFormView.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Controller\AuthController.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View/SignupFormView.cs">
+    <Compile Include="View\LoginFormView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View/SignupFormView.Designer.cs">
-      <DependentUpon>View/SignupFormView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Model/User.cs" />
-    <EmbeddedResource Include="View/LoginFormView.resx">
+    <Compile Include="View\LoginFormView.Designer.cs">
       <DependentUpon>LoginFormView.cs</DependentUpon>
-    </EmbeddedResource>
+    </Compile>
+    <Compile Include="View\SignupFormView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SignupFormView.Designer.cs">
+      <DependentUpon>SignupFormView.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -74,7 +71,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="View/SignupFormView.resx">
+    <EmbeddedResource Include="View\LoginFormView.resx">
+      <DependentUpon>LoginFormView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SignupFormView.resx">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -90,5 +90,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
