--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -76,6 +76,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\SignupFormView.resx">
       <DependentUpon>SignupFormView.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
