--- a/App.config
+++ b/App.config
@@ -17,4 +17,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="AdvisorDatabase" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; Initial Catalog=Advisor; Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
