--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -58,6 +58,10 @@
     <Compile Include="Migrations\201909221435170_CreateUser.Designer.cs">
       <DependentUpon>201909221435170_CreateUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909221453455_AddNameProperties.cs" />
+    <Compile Include="Migrations\201909221453455_AddNameProperties.Designer.cs">
+      <DependentUpon>201909221453455_AddNameProperties.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
     <Compile Include="Model\User.cs" />
@@ -79,6 +83,9 @@
     </Compile>
     <EmbeddedResource Include="Migrations\201909221435170_CreateUser.resx">
       <DependentUpon>201909221435170_CreateUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909221453455_AddNameProperties.resx">
+      <DependentUpon>201909221453455_AddNameProperties.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
