Rename connection and remove pluralization from db tables

--- a/App.config
+++ b/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="AdvisorDatabase" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; Initial Catalog=Advisor; Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+    <add name="DatabaseContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB; Initial Catalog=Advisor; Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
