--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -54,16 +54,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\AuthController.cs" />
-    <Compile Include="Migrations\201909221435170_CreateUser.cs" />
-    <Compile Include="Migrations\201909221435170_CreateUser.Designer.cs">
-      <DependentUpon>201909221435170_CreateUser.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201909221453455_AddNameProperties.cs" />
-    <Compile Include="Migrations\201909221453455_AddNameProperties.Designer.cs">
-      <DependentUpon>201909221453455_AddNameProperties.cs</DependentUpon>
+    <Compile Include="Migrations\201909221555231_MainEntities.cs" />
+    <Compile Include="Migrations\201909221555231_MainEntities.Designer.cs">
+      <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
+    <Compile Include="Model\Faculty.cs" />
+    <Compile Include="Model\Review.cs" />
+    <Compile Include="Model\StudyProgram.cs" />
+    <Compile Include="Model\University.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,11 +81,8 @@
     <Compile Include="View\SignupFormView.Designer.cs">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Migrations\201909221435170_CreateUser.resx">
-      <DependentUpon>201909221435170_CreateUser.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201909221453455_AddNameProperties.resx">
-      <DependentUpon>201909221453455_AddNameProperties.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201909221555231_MainEntities.resx">
+      <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
