--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -60,6 +60,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DatabaseContext.cs" />
+    <Compile Include="Model\DB.cs" />
     <Compile Include="Model\Faculty.cs" />
     <Compile Include="Model\Review.cs" />
     <Compile Include="Model\StudyProgram.cs" />
