--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -82,6 +82,12 @@
     <Compile Include="View\SignupFormView.Designer.cs">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\WhatUniversity.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\WhatUniversity.Designer.cs">
+      <DependentUpon>WhatUniversity.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Migrations\201909221555231_MainEntities.resx">
       <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
     </EmbeddedResource>
