--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -107,6 +107,9 @@
       <DependentUpon>SignupFormView.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\WhatUniversity.resx">
+      <DependentUpon>WhatUniversity.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
