--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -86,6 +86,12 @@
     <Compile Include="View\SignupFormView.Designer.cs">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\WhatUniversity.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\WhatUniversity.Designer.cs">
+      <DependentUpon>WhatUniversity.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Migrations\201909221555231_MainEntities.resx">
       <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +113,9 @@
     <EmbeddedResource Include="View\SignupFormView.resx">
       <DependentUpon>SignupFormView.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\WhatUniversity.resx">
+      <DependentUpon>WhatUniversity.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
