--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validator\SignupDataValidator.cs" />
     <Compile Include="Validator\LoginDataValidator.cs" />
+    <Compile Include="View\IndividualFaculty.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\IndividualFaculty.Designer.cs">
+      <DependentUpon>IndividualFaculty.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\LoginFormView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -107,6 +113,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\IndividualFaculty.resx">
+      <DependentUpon>IndividualFaculty.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\LoginFormView.resx">
       <DependentUpon>LoginFormView.cs</DependentUpon>
     </EmbeddedResource>
