--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -74,11 +74,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validator\SignupDataValidator.cs" />
     <Compile Include="Validator\LoginDataValidator.cs" />
-    <Compile Include="View\IndividualFaculty.cs">
+    <Compile Include="View\IndividualFacultyView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\IndividualFaculty.Designer.cs">
-      <DependentUpon>IndividualFaculty.cs</DependentUpon>
+    <Compile Include="View\IndividualFacultyView.Designer.cs">
+      <DependentUpon>IndividualFacultyView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\LoginFormView.cs">
       <SubType>Form</SubType>
@@ -92,11 +92,11 @@
     <Compile Include="View\SignupFormView.Designer.cs">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\WhatUniversity.cs">
+    <Compile Include="View\WhatUniversityView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\WhatUniversity.Designer.cs">
-      <DependentUpon>WhatUniversity.cs</DependentUpon>
+    <Compile Include="View\WhatUniversityView.Designer.cs">
+      <DependentUpon>WhatUniversityView.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Migrations\201909221555231_MainEntities.resx">
       <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
@@ -113,8 +113,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="View\IndividualFaculty.resx">
-      <DependentUpon>IndividualFaculty.cs</DependentUpon>
+    <EmbeddedResource Include="View\IndividualFacultyView.resx">
+      <DependentUpon>IndividualFacultyView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\LoginFormView.resx">
       <DependentUpon>LoginFormView.cs</DependentUpon>
@@ -123,8 +123,8 @@
       <DependentUpon>SignupFormView.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\WhatUniversity.resx">
-      <DependentUpon>WhatUniversity.cs</DependentUpon>
+    <EmbeddedResource Include="View\WhatUniversityView.resx">
+      <DependentUpon>WhatUniversityView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
