--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -80,6 +80,12 @@
     <Compile Include="View\IndividualFacultyView.Designer.cs">
       <DependentUpon>IndividualFacultyView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\IndividualStudyProgramView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\IndividualStudyProgramView.Designer.cs">
+      <DependentUpon>IndividualStudyProgramView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\LoginFormView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     </Compile>
     <EmbeddedResource Include="View\IndividualFacultyView.resx">
       <DependentUpon>IndividualFacultyView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\IndividualStudyProgramView.resx">
+      <DependentUpon>IndividualStudyProgramView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\LoginFormView.resx">
       <DependentUpon>LoginFormView.cs</DependentUpon>
