--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validator\SignupDataValidator.cs" />
     <Compile Include="Validator\LoginDataValidator.cs" />
+    <Compile Include="View\FacultiesListView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\FacultiesListView.Designer.cs">
+      <DependentUpon>FacultiesListView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\IndividualFacultyView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\FacultiesListView.resx">
+      <DependentUpon>FacultiesListView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\IndividualFacultyView.resx">
       <DependentUpon>IndividualFacultyView.cs</DependentUpon>
     </EmbeddedResource>
