--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -77,8 +77,13 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validator\ILoginDataValidator.cs" />
+    <Compile Include="Validator\ISignupDataValidator.cs" />
     <Compile Include="Validator\SignupDataValidator.cs" />
     <Compile Include="Validator\LoginDataValidator.cs" />
+    <Compile Include="View\Login\AbstractLoginFormView.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="View\IndividualFacultyView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,10 +96,10 @@
     <Compile Include="View\IndividualStudyProgramView.Designer.cs">
       <DependentUpon>IndividualStudyProgramView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\LoginFormView.cs">
+    <Compile Include="View\Login\LoginFormView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\LoginFormView.Designer.cs">
+    <Compile Include="View\Login\LoginFormView.Designer.cs">
       <DependentUpon>LoginFormView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\SignupFormView.cs">
@@ -130,7 +135,7 @@
     <EmbeddedResource Include="View\IndividualStudyProgramView.resx">
       <DependentUpon>IndividualStudyProgramView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\LoginFormView.resx">
+    <EmbeddedResource Include="View\Login\LoginFormView.resx">
       <DependentUpon>LoginFormView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\SignupFormView.resx">
