--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Validator\ISignupDataValidator.cs" />
     <Compile Include="Validator\SignupDataValidator.cs" />
     <Compile Include="Validator\LoginDataValidator.cs" />
-    <Compile Include="View\Login\AbstractLoginFormView.cs">
+    <Compile Include="View\Login\ALoginFormView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\IndividualFacultyView.cs">
@@ -102,10 +102,13 @@
     <Compile Include="View\Login\LoginFormView.Designer.cs">
       <DependentUpon>LoginFormView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\SignupFormView.cs">
+    <Compile Include="View\Signup\ASignupFormView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\SignupFormView.Designer.cs">
+    <Compile Include="View\Signup\SignupFormView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Signup\SignupFormView.Designer.cs">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\WhatUniversityView.cs">
@@ -138,7 +141,7 @@
     <EmbeddedResource Include="View\Login\LoginFormView.resx">
       <DependentUpon>LoginFormView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\SignupFormView.resx">
+    <EmbeddedResource Include="View\Signup\SignupFormView.resx">
       <DependentUpon>SignupFormView.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
