--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -104,6 +104,12 @@
     <Compile Include="View\SignupFormView.Designer.cs">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\StudySubjectListView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\StudySubjectListView.Designer.cs">
+      <DependentUpon>StudySubjectListView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\WhatUniversityView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -140,6 +146,9 @@
     <EmbeddedResource Include="View\SignupFormView.resx">
       <DependentUpon>SignupFormView.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\StudySubjectListView.resx">
+      <DependentUpon>StudySubjectListView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\WhatUniversityView.resx">
       <DependentUpon>WhatUniversityView.cs</DependentUpon>
