--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="packages\EntityFramework.6.3.0\build\EntityFramework.props" Condition="Exists('packages\EntityFramework.6.3.0\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -13,8 +12,6 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -37,10 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>packages\EntityFramework.6.3.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>packages\EntityFramework.6.3.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
@@ -73,7 +70,7 @@
       <DependentUpon>201909240753298_RemoveLastname.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201909261214327_CreatedStudySubject.cs" />
-    <Compile Include="Migrations\201909261214327_CreatedStudySubject.designer.cs">
+    <Compile Include="Migrations\201909261214327_CreatedStudySubject.Designer.cs">
       <DependentUpon>201909261214327_CreatedStudySubject.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
@@ -109,12 +106,8 @@
     <Compile Include="View\IndividualStudyProgramView.Designer.cs">
       <DependentUpon>IndividualStudyProgramView.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Auth\LoginFormView.cs"/>
-    <Compile Include="View\IndividualUniversityView.cs">
+    <Compile Include="View\Auth\LoginFormView.cs">
       <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="View\IndividualUniversityView.Designer.cs">
-      <DependentUpon>IndividualUniversityView.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Auth\LoginFormView.Designer.cs">
       <DependentUpon>LoginFormView.cs</DependentUpon>
@@ -125,17 +118,23 @@
     <Compile Include="View\Auth\SignupFormView.Designer.cs">
       <DependentUpon>SignupFormView.cs</DependentUpon>
     </Compile>
-      <Compile Include="View\HomeView.cs">
-        <SubType>Form</SubType>
-      </Compile>>
+    <Compile Include="View\HomeView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\HomeView.Designer.cs">
+      <DependentUpon>HomeView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\IndividualUniversityView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\IndividualUniversityView.Designer.cs">
+      <DependentUpon>IndividualUniversityView.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\StudySubjectListView.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\StudySubjectListView.Designer.cs">
       <DependentUpon>StudySubjectListView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="View\HomeView.Designer.cs">
-      <DependentUpon>HomeView.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Migrations\201909221555231_MainEntities.resx">
       <DependentUpon>201909221555231_MainEntities.cs</DependentUpon>
@@ -165,9 +164,6 @@
       <DependentUpon>IndividualStudyProgramView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Auth\LoginFormView.resx">
-    <EmbeddedResource Include="View\IndividualUniversityView.resx">
-      <DependentUpon>IndividualUniversityView.cs</DependentUpon>
-    </EmbeddedResource>
       <DependentUpon>LoginFormView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Auth\SignupFormView.resx">
@@ -176,9 +172,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="View\HomeView.resx">
       <DependentUpon>HomeView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\IndividualUniversityView.resx">
+      <DependentUpon>IndividualUniversityView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\StudySubjectListView.resx">
       <DependentUpon>StudySubjectListView.cs</DependentUpon>
-    </EmbeddedResource>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -196,12 +195,4 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('packages\EntityFramework.6.3.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.3.0\build\EntityFramework.props'))" />
-    <Error Condition="!Exists('packages\EntityFramework.6.3.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\EntityFramework.6.3.0\build\EntityFramework.targets'))" />
-  </Target>
-  <Import Project="packages\EntityFramework.6.3.0\build\EntityFramework.targets" Condition="Exists('packages\EntityFramework.6.3.0\build\EntityFramework.targets')" />
 </Project>
