Display study subjects view

--- a/Advisor.csproj
+++ b/Advisor.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Controller\Home\IHomeController.cs" />
     <Compile Include="Controller\StudyProgram\IStudyProgramController.cs" />
     <Compile Include="Controller\StudyProgram\StudyProgramController.cs" />
+    <Compile Include="Controller\StudySubjectList\IStudySubjectListController.cs" />
+    <Compile Include="Controller\StudySubjectList\StudySubjectListController.cs" />
     <Compile Include="Controller\University\IUniversityController.cs" />
     <Compile Include="Controller\University\UniversityController.cs" />
     <Compile Include="DependencyInjection\Bindings.cs" />
